--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
+    "validator": "^13.7.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
