--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,6 +19,7 @@
     "http-status-codes": "^2.2.0",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
+    "react-redux": "^8.0.5",
     "validator": "^13.7.0"
   },
   "devDependencies": {
